2008-06-21  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (show-all-children): Compute geometry
	and selection first and then show only necessary children.
	(show-child): remove unneeded display-p parameter.

	* src/config.lisp (get-fullscreen-size): Place the frame border
	outside the screen (this prevent the loose of 2 pixels per
	directions :)

2008-06-12  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (focus-child): Algorithm change to
	raise only the selected child.

2008-06-08  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (raise-p-list, show-all-children):
	Raise only viewable children.

2008-06-06  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (show-all-children): Always raise all
	displayed children. Remove all references to raise-p.

2008-06-04  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/menu-def.lisp (child-menu): New menu entry on raise/lower
	child in its frame.

	* src/bindings-second-mode.lisp ("Page_Down", "Page_Up"): New
	second mode binding on raise/lower child in its frame.

	* src/clfswm-nw-hooks.lisp (leave-focus-frame-nw-hook): Adapt
	behaviour to the new raise/lower property.
	Call clear-nw-hook before the rest of the hook.

	* src/bindings.lisp (mouse-click-to-focus-and-move-window)
	(mouse-click-to-focus-and-resize-window): Stop button event. This
	prevent a keyboard/pointer freeze.

2008-06-03  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (frame-lower-child)
	(frame-raise-child): New functions to raise/lower a child in its
	frame.

	* src/clfswm-util.lisp (have-to-present-windows)
	(have-to-present-all-windows): New functions to have an MaxOS
	expose like on mouse click in screen corner.

	* src/clfswm-info.lisp ("Page_Down", "Page_Up"): Add boundaries.

2008-05-30  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (unhide-a-child-from-all-frames): Unhide a